tests/negative/scope/import-fake-package/err.expected
ERROR:
There is no package named `nosuchpackage`, but it's referenced at test.smol:3:8-3:21:
         2 | 
         3 | import nosuchpackage;
           |        ^^^^^^^^^^^^^
         4 | 
